--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yoru",
-  "description": "The new trnglina.org Ghost theme.",
+  "description": "The new https://www.trnglina.org Ghost theme.",
   "version": "1.0.0",
   "engines": {
     "ghost": ">=2.0.0",
