--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yoru",
-  "description": "The new https://www.trnglina.org Ghost theme.",
-  "version": "1.6.0",
+  "description": "trnglina.org, version 6",
+  "version": "1.7.0",
   "engines": {
     "ghost": ">=2.0.0",
     "ghost-api": "v2"
